// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAnt should render a text input by default 1`] = `
<Input
  disabled={false}
  id="the_id"
  label="oh"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  prefixCls="ant-input"
  readOnly={false}
  type="text"
  value=""
/>
`;

exports[`TextAnt should render a textarea with the control option set 1`] = `
<TextArea
  disabled={false}
  id="the_id"
  label="oh"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  prefixCls="ant-input"
  readOnly={false}
  value=""
/>
`;

exports[`TextFormAnt should render form item with a text input by default 1`] = `
<FormItemAnt
  operation={
    bound TextImpl {
      "_errors": Array [],
      "_isSaving": false,
      "_value": undefined,
      "constructor": [Function],
      "doClearErrors": [Function],
      "doGetValue": [Function],
      "doOnValidate": [Function],
      "doPlaceholder": [Function],
      "doSetValue": [Function],
      "domId": "the_id",
      "getDisabled": [Function],
      "getErrors": [Function],
      "getHelp": [Function],
      "getInitialValue": [Function],
      "getInvisible": [Function],
      "getLabel": [Function],
      "getReadonly": [Function],
      "id": "TheId",
      "impl": Object {
        "disabled": [Function],
        "id": "TheId",
        "label": "oh",
      },
      "setError": [Function],
      Symbol(mobx did run lazy initializers): true,
      Symbol(mobx administration): ObservableObjectAdministration$$1 {
        "defaultEnhancer": [Function],
        "keysAtom": Atom$$1 {
          "diffValue": 0,
          "isBeingObserved": false,
          "isPendingUnobservation": false,
          "lastAccessedBy": 0,
          "lowestObserverState": 2,
          "name": "TextImpl@86.keys",
          "observers": Set {},
        },
        "name": "TextImpl@86",
        "target": [Circular],
        "values": Map {
          "_errors" => Array [],
          "label" => "oh",
          "disabled" => false,
          "enabled" => true,
          "invisible" => false,
          "readOnly" => false,
          "help" => undefined,
          "errors" => Array [],
          "error" => undefined,
          "hasErrors" => false,
          "_value" => undefined,
          "_isSaving" => false,
          "inputType" => undefined,
          "value" => undefined,
          "placeholder" => undefined,
          "required" => undefined,
          "isInitialValue" => undefined,
          "control" => "input",
        },
      },
    }
  }
>
  <TextAnt
    disabled={false}
    id="the_id"
    operation={
      bound TextImpl {
        "_errors": Array [],
        "_isSaving": false,
        "_value": undefined,
        "constructor": [Function],
        "doClearErrors": [Function],
        "doGetValue": [Function],
        "doOnValidate": [Function],
        "doPlaceholder": [Function],
        "doSetValue": [Function],
        "domId": "the_id",
        "getDisabled": [Function],
        "getErrors": [Function],
        "getHelp": [Function],
        "getInitialValue": [Function],
        "getInvisible": [Function],
        "getLabel": [Function],
        "getReadonly": [Function],
        "id": "TheId",
        "impl": Object {
          "disabled": [Function],
          "id": "TheId",
          "label": "oh",
        },
        "setError": [Function],
        Symbol(mobx did run lazy initializers): true,
        Symbol(mobx administration): ObservableObjectAdministration$$1 {
          "defaultEnhancer": [Function],
          "keysAtom": Atom$$1 {
            "diffValue": 0,
            "isBeingObserved": false,
            "isPendingUnobservation": false,
            "lastAccessedBy": 0,
            "lowestObserverState": 2,
            "name": "TextImpl@86.keys",
            "observers": Set {},
          },
          "name": "TextImpl@86",
          "target": [Circular],
          "values": Map {
            "_errors" => Array [],
            "label" => "oh",
            "disabled" => false,
            "enabled" => true,
            "invisible" => false,
            "readOnly" => false,
            "help" => undefined,
            "errors" => Array [],
            "error" => undefined,
            "hasErrors" => false,
            "_value" => undefined,
            "_isSaving" => false,
            "inputType" => undefined,
            "value" => undefined,
            "placeholder" => undefined,
            "required" => undefined,
            "isInitialValue" => undefined,
            "control" => "input",
          },
        },
      }
    }
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`TextSearchAnt should render search text input by default 1`] = `
<Search
  disabled={false}
  enterButton={false}
  id="the_id"
  inputPrefixCls="ant-input"
  label="oh"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  prefixCls="ant-input-search"
  readOnly={false}
  value=""
/>
`;
